# C_test

./: CMakeLists.txt  main.c
avlTree/: AvlTree.c
infixPrefix/: InfixPrefix.h  InfixPrefixPostfix.c
stack/: Stack.c  Stack.h
tree/: Tree.c  TreeNode.h  TreeQueue.h  TreeStack.h
